@@ -1,4 +1,5 @@
 pgcenter (0.6.2) unstable; urgency=low
+  * inject program version info from git at build time
   * fix #66, pgcenter crashes when no running postgres
   * avoid rude disconnection from postgres at top-program exit
 
